styling of sheds section

--- a/index.css
+++ b/index.css
@@ -34,7 +34,7 @@ h3{
 /*shades section*/
 .shades{
     background-image: url("photos/shades.jpg");
-    color:green;
+    color:aqua;
     text-align: center;
 }
 
@@ -43,6 +43,11 @@ h3{
     width: 25%;
     color: cyan;
     
+  }
+  .shades>.income{
+    float: left;
+    width: 33.3%;
+    background-color: skyblue;
   }
 /*about us section*/
 .about>p{
